# JaguarLinux-package-manager

./: Cargo.toml  README.md
ps4/: Cargo.toml
ps4-repo-gen/: Cargo.toml
ps4-repo-gen/src/: main.rs
ps4/scripts/: ps4makepkgbuild
ps4/src/ps4/: mod.rs  ps4_lock_package.rs  ps4mirror.rs
ps4/src/ps4/database/: mod.rs
ps4/src/ps4/packaging/: ps4_packageing_setup.rs
ps4/src/ps4/ps4_package_config/: mod.rs  ps4_mirror_config_main.rs  ps4config_init.rs
ps4/src/ps4/ps4_package_manager_commands/: install.rs  localinstall.rs  mod.rs  remove.rs  sync.rs  upgrade.rs
ps4/src/ps4/ps4_package_transactions/: conflict.rs  install.rs  mod.rs
scripts/: ps4makepkgbuild
src/: main.rs
src/ps4/: ps4_package_progess_bar.rs
src/ps4/database/: ps4db.rs  ps4dbmain.rs
src/ps4/packaging/: mod.rs  ps4_packageing_main.rs
src/ps4/ps4_package_config/: ps4_mirror_config_main.rs  ps4config_init.rs
src/ps4/ps4_package_manager_commands/: groupinstall.rs  help.rs  list.rs  localinstall.rs  remove.rs  upgrade.rs
src/ps4/ps4_package_transactions/: dependencies.rs  install.rs
